tests/paczka1/fuzzy1/90518759.err
Error in line 2: PsiclTBDvRt A22 87,2
Error in line 10: xEz A440 15,1
Error in line 11: S373 A22 29,1
Error in line 14: PsiclTBDvRt A226 63,7
Error in line 16: PsiclTBDvRt A440 44,2
Error in line 13: xEz A22 47,8
Error in line 22: PsiclTBDvRt A22 91,7
Error in line 26: PsiclTBDvRt A226 531,5
